Fixing Overflow Issues

--- a/src/App.css
+++ b/src/App.css
@@ -153,6 +153,7 @@
   height: 100%;
   width: 100%;
   object-fit: cover;
+  overflow: hidden;
 }
 
 .centered {
